<resources>
    <string name="app_name">HustManager</string>
    <string name="title_home">Tổng quan</string>
    <string name="title_dashboard">Cá nhân</string>
    <string name="title_notifications">Dự kiến mục tiêu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mssv">Nhập MSSV</string>
    <string name="password">Nhập password</string>
    <string name="log_in">Đăng nhập</string>
    <string name="lost_pass">Quên mật khẩu</string>
    <string name="name">Nhập họ và tên</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="sign_in">Đăng ký</string>
    <string name="title_condition">Khi đăng ký là bạn đã chấp nhận</string>
    <string name="title_dk_use">Điều khoản sử dụng</string>
    <string name="wating_sign_in">Đang đăng ký...</string>
    <string name="login_register">Đăng nhập/Đăng ký</string>
    <string name="title_name_app">HUST MANAGER</string>
    <string name="content_splash">splash</string>
    <string name="Cannot_empty_value">Bạn không được để trống thông tin</string>
    <string name="login_success">Đăng nhập thành công...</string>
    <string name="wating_login">Đăng nhập...</string>
    <string name="title_back">back</string>
    <string name="total_credits">Tổng số tín chỉ</string>
    <string name="target_excellent">Xuất sắc</string>
    <string name="target_good">Khá</string>
    <string name="target_great">Giỏi</string>
    <string name="target_avg">Trung bình</string>
    <string name="love_bk_forever">Love BK forever</string>
    <string name="message_target">Mục tiêu của bạn là gì?</string>
    <string name="image_target">image_target</string>
    <string name="def_credits">0 tín</string>
    <string name="def_point">4.0</string>
    <string name="image_add">image_add</string>
    <string name="subject_id">Mã học phần</string>
    <string name="subject_name">Tên học phần</string>
    <string name="subject_number_credits">Số tín chỉ</string>
    <string name="subject_a">A/A+</string>
    <string name="subject_b_plus">B+</string>
    <string name="subject_b">B</string>
    <string name="subject_c_plus">C+</string>
    <string name="subject_c">C</string>
    <string name="subject_d_plus">D+</string>
    <string name="subject_d">D</string>
    <string name="subject_f">F</string>
    <string name="save_new_subject">Lưu</string>
    <string name="cancle_new_subject">Hủy</string>
    <string name="image_new_subject">image_new_subject</string>
    <string name="title_new_subject">Môn mới</string>
    <string name="title_renew_subject">Cải thiện</string>
    <string name="title_choose_target">Chọn loại dự kiến</string>
    <string name="person_cpa">CPA</string>
    <string name="person_number_learned">Số tín chỉ đã học</string>
    <string name="title_number_debt">Số tín chỉ nợ</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="table_point">Bảng điểm</string>
    <string name="fail_subject">Môn học nợ</string>
    <string name="title_tablet_point">Bảng điểm</string>
    <string name="title_fail_subject">Môn học lại</string>
    <string name="hoc_ky">Học kỳ</string>
    <string name="subject_quatrinh">Điểm quá trình</string>
    <string name="subject_thi">Điểm thi</string>
    <string name="he_so">Hệ số</string>

    <string-array name="point_arrays">
        <item>All</item>
        <item>A/A+</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
    </string-array>

    <string-array name="point_hk">
        <item>20141</item>
        <item>20142</item>
        <item>20143</item>
        <item>20151</item>
        <item>20152</item>
        <item>20153</item>
        <item>20161</item>
        <item>20162</item>
        <item>20163</item>
        <item>20171</item>
        <item>20172</item>
        <item>20173</item>
        <item>20181</item>
        <item>20182</item>
        <item>20183</item>
        <item>20191</item>
    </string-array>
</resources>
