<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="@dimen/dimen_text_14" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30">

        <EditText
            android:id="@+id/edit_mssv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginEnd="@dimen/dimen_20"
            android:autofillHints="@string/mssv"
            android:hint="@string/mssv"
            android:inputType="number"
            android:textSize="@dimen/dimen_text_14" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_30"
            android:layout_marginRight="@dimen/dimen_20"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/dimen_text_14" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20"
        android:orientation="horizontal"
        android:theme="@style/radio_button">

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20"
            android:checked="false"
            android:text="@string/male"
            android:textSize="@dimen/dimen_text_14"
            android:theme="@style/radio_button" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="@dimen/dimen_text_14"
            android:theme="@style/radio_button" />
    </RadioGroup>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/sanfranciscodisplay_semibold"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_text_14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfranciscodisplay_regular"
            android:text="@string/title_condition"
            android:textSize="@dimen/dimen_text_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sanfranciscodisplay_regular"
            android:text="@string/title_dk_use"
            android:textColor="@color/color_blue_700"
            android:textSize="@dimen/dimen_text_14" />
    </LinearLayout>

</LinearLayout>
